<resources>
    <string name="app_name">Fondos de pantalla</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desarrolloador">Desarrollado por : Luis Martinez</string>

    <!--MENU ADMIN -->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de Administradores</string>
    <string name="Salir">Cerrar Seción</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MENU CLIENTES -->
    <string name="OpcionesTxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Mas Opciones</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Compartir">Compartir</string>


    <!--REGISTRO DE ADMINISTRADORES -->
    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Registrar">Registrar</string>



</resources>