<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.RegistrarAdmin">

    <!-- TODO: Update blank fragment layout -->

 <androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="15dp">

     <TextView
         android:text="@string/RegistroTXT"
         android:gravity="center"
         android:textColor="#000"
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="horizontal">


    <!--FECHA TXT-->
    <TextView
        android:id="@+id/FechaRegistro"
        android:text="@string/FechaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calendario_ico_foreground"/>
</androidx.appcompat.widget.LinearLayoutCompat>



     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:src="@drawable/admin"
         android:layout_marginTop="20dp"/>

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <EditText
             android:layout_marginTop="20dp"
             android:id="@+id/Correo"
             android:hint="@string/Correo"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

     </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:passwordToggleEnabled="true">
          <EditText
              android:id="@+id/Password"
              android:hint="@string/Password"
              android:inputType="textPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/Nombres"
             android:hint="@string/Nombres"
             android:inputType="textCapWords|textAutoCorrect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/Apellidos"
             android:hint="@string/Apellidos"
             android:inputType="textCapWords|textAutoCorrect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/Edad"
             android:hint="@string/Edad"
             android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>


  <Button
      android:id="@+id/Registrar"
      android:text="@string/Registrar"
      android:background="#0499B1"
      android:textColor="#ffff"
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    


</ScrollView>